# lib_challenge_calculator_payments

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: releases.yml  run-tests.yml
lib_pay_calculator/: inbound_adapter.py
lib_pay_calculator/config/: __init__.py  calculator_pay_settings_builder.py  calculator_pay_settings_default.py
lib_pay_calculator/exceptions/: __init__.py  bad_formart_exception.py  error_model.py  illegal_arguments_exception.py
lib_pay_calculator/handlers/: __init__.py  calculator_pay_handler.py  calculator_pay_handler_default.py
lib_pay_calculator/models/: __init__.py  emp_days_worked_model.py  emp_payment_model.py  setting_day_model.py  setting_schedule_model.py
lib_pay_calculator/serializers/: __init__.py  calculator_pay_deserializer.py  calculator_pay_serializer.py  calculator_pay_serializer_txt.py
lib_pay_calculator/services/: __init__.py  calculator_pay_services.py
tests/: __init__.py
tests/functional/: test_inbound_adapter.py
tests/static/: five_employees.txt
tests/unit/config/: test_calculator_pay_settings_default.py
tests/unit/handlers/: test_calculator_pay_handler_default.py
tests/unit/models/: test_setting_schedule_model.py
tests/unit/serializers/: test_calculator_pay_serializer_txt.py
tests/unit/services/: test_calculator_pay_services.py
